Item109: Next wave of TWikiVariables to Macros renaming
git-svn-id: http://svn.foswiki.org/trunk@686 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/TWiki.pot
+++ b/core/locale/TWiki.pot
@@ -1339,7 +1339,7 @@ msgstr ""
 
 #: templates/settings.tmpl:26
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
 
