--- a/core/locale/da.po
+++ b/core/locale/da.po
@@ -1452,10 +1452,10 @@ msgstr ""
 
 #: templates/settings.tmpl:26
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Vejledning til <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Vejledning til <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>definition af side-præferencer</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
