--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -1465,10 +1465,10 @@ msgstr ""
 
 #: templates/settings.tmpl:26
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Obtenir de l'aide sur <a target='TWikiVariables' class='twikiPopUp' href='%"
+"Obtenir de l'aide sur <a target='Macros' class='twikiPopUp' href='%"
 "1' rel='nofollow'>les paramètres des pages</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
