--- a/core/locale/it.po
+++ b/core/locale/it.po
@@ -1450,10 +1450,10 @@ msgstr ""
 
 #: templates/settings.tmpl:26
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Aiuto su <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Aiuto su <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Defininire i parametri di pagina</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
