--- a/core/locale/pt.po
+++ b/core/locale/pt.po
@@ -1456,10 +1456,10 @@ msgstr ""
 
 #: templates/settings.tmpl:26
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Obtenha ajuda sobre como <a target='TWikiVariables' class='twikiPopUp' "
+"Obtenha ajuda sobre como <a target='Macros' class='twikiPopUp' "
 "href='%1' rel='nofollow'>configurar preferências do tópico</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
