--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -1459,11 +1459,11 @@ msgstr ""
 #: templates/settings.tmpl:26
 #, fuzzy
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Nápověda pro <a target='TWikiVariables' onclick=\"return launchWindow('%"
-"1','TWikiVariables')\" href='%2' rel='nofollow'>Nastavení preferencí článku</"
+"Nápověda pro <a target='Macros' onclick=\"return launchWindow('%"
+"1','Macros')\" href='%2' rel='nofollow'>Nastavení preferencí článku</"
 "a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
@@ -3848,11 +3848,11 @@ msgstr ""
 
 #, fuzzy
 #~ msgid ""
-#~ "Please see <a target='TWikiVariables' onclick=\"return launchWindow('%"
+#~ "Please see <a target='Macros' onclick=\"return launchWindow('%"
 #~ "1','FileAttachment')\" href='' rel='nofollow'>FileAttachment</a> for more "
 #~ "information about attaching files."
 #~ msgstr ""
-#~ "*Nápověda:* Podívejte se na  <a target='TWikiVariables' onclick=\"return "
+#~ "*Nápověda:* Podívejte se na  <a target='Macros' onclick=\"return "
 #~ "launchWindow('%1','FileAttachment')\" href='' rel='nofollow'>Přílohy</a> "
 #~ "pro více informací o připojených souborech."
 
