--- a/core/locale/pl.po
+++ b/core/locale/pl.po
@@ -1468,11 +1468,11 @@ msgstr ""
 #: templates/settings.tmpl:26
 #, fuzzy
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Pomoc: <a target='TWikiVariables' onclick=\"return launchWindow('%"
-"1','TWikiVariables')\" href='%2' rel='nofollow'>Ustawienia strony</a>."
+"Pomoc: <a target='Macros' onclick=\"return launchWindow('%"
+"1','Macros')\" href='%2' rel='nofollow'>Ustawienia strony</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
 msgid "Get notified on changes on this search"
@@ -3849,11 +3849,11 @@ msgstr ""
 
 #, fuzzy
 #~ msgid ""
-#~ "Please see <a target='TWikiVariables' onclick=\"return launchWindow('%"
+#~ "Please see <a target='Macros' onclick=\"return launchWindow('%"
 #~ "1','FileAttachment')\" href='' rel='nofollow'>FileAttachment</a> for more "
 #~ "information about attaching files."
 #~ msgstr ""
-#~ "*Pomoc:* <a target='TWikiVariables' onclick=\"return launchWindow('%"
+#~ "*Pomoc:* <a target='Macros' onclick=\"return launchWindow('%"
 #~ "1','FileAttachment')\" href='' rel='nofollow'>FileAttachment</a>"
 
 #~ msgid "WYSIWYG"
