--- a/core/locale/ru.po
+++ b/core/locale/ru.po
@@ -1491,11 +1491,11 @@ msgstr ""
 #: templates/settings.tmpl:26
 #, fuzzy
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Получить помощь по вопросу <a target='TWikiVariables' onclick=\"return "
-"launchWindow('%1','TWikiVariables')\" href='%2' rel='nofollow'>Как "
+"Получить помощь по вопросу <a target='Macros' onclick=\"return "
+"launchWindow('%1','Macros')\" href='%2' rel='nofollow'>Как "
 "установить свойства темы</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
@@ -3926,11 +3926,11 @@ msgstr ""
 
 #, fuzzy
 #~ msgid ""
-#~ "Please see <a target='TWikiVariables' onclick=\"return launchWindow('%"
+#~ "Please see <a target='Macros' onclick=\"return launchWindow('%"
 #~ "1','FileAttachment')\" href='' rel='nofollow'>FileAttachment</a> for more "
 #~ "information about attaching files."
 #~ msgstr ""
-#~ "*Подсказка:* Вы можете прочитать в <a target='TWikiVariables' onclick="
+#~ "*Подсказка:* Вы можете прочитать в <a target='Macros' onclick="
 #~ "\"return launchWindow('%1','FileAttachment')\" href='' "
 #~ "rel='nofollow'>FileAttachment</a> дополнительную информацию о "
 #~ "прикреплении файлов."
