--- a/core/locale/uk.po
+++ b/core/locale/uk.po
@@ -1447,11 +1447,11 @@ msgstr ""
 #: templates/settings.tmpl:26
 #, fuzzy
 msgid ""
-"Get help on <a target='TWikiVariables' class='twikiPopUp' href='%1' "
+"Get help on <a target='Macros' class='twikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Отримати допомогу з питання <a target='TWikiVariables' onclick=\"return "
-"launchWindow('%1','TWikiVariables')\" href='%2' rel='nofollow'>Як встановити "
+"Отримати допомогу з питання <a target='Macros' onclick=\"return "
+"launchWindow('%1','Macros')\" href='%2' rel='nofollow'>Як встановити "
 "властивості теми</a>."
 
 #: data/TWiki/WebSearch.txt:5 data/TWiki/WebSearchAdvanced.txt:5
@@ -3823,11 +3823,11 @@ msgstr ""
 
 #, fuzzy
 #~ msgid ""
-#~ "Please see <a target='TWikiVariables' onclick=\"return launchWindow('%"
+#~ "Please see <a target='Macros' onclick=\"return launchWindow('%"
 #~ "1','FileAttachment')\" href='' rel='nofollow'>FileAttachment</a> for more "
 #~ "information about attaching files."
 #~ msgstr ""
-#~ "*Подсказка:* Вы можете прочитать в <a target='TWikiVariables' onclick="
+#~ "*Подсказка:* Вы можете прочитать в <a target='Macros' onclick="
 #~ "\"return launchWindow('%1','FileAttachment')\" href='' "
 #~ "rel='nofollow'>FileAttachment</a> дополнительную информацию о "
 #~ "прикреплении файлов."
