Item205: More TWiki. -> %SYSTEMWEB% again again
git-svn-id: http://svn.foswiki.org/trunk@758 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -100,7 +100,7 @@ This document identifies these people as authors of TWiki.
 | Sergej Znamenskij    | TWiki:Main.SergejZnamenskij    | Russia      |
 | Sergey "JSinx"       | TWiki:Main.SergeyJSinx         | Russia      |
 | Stanley Knutson      | TWiki:Main.StanleyKnutson      | USA         |
-| Steffen Poulsen      | TWiki.Main.SteffenPoulsen      | Denmark     |
+| Steffen Poulsen      | TWiki:Main.SteffenPoulsen      | Denmark     |
 | Sue Blake            | TWiki:Main.SueBlake            | Australia   |
 | Sven Dowideit        | TWiki:Main.SvenDowideit        | Australia   |
 | Ted Pavlic           | TWiki:Main.TedPavlic           | USA         |
