--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -211,8 +211,8 @@ msgid "(=all= to show all topics)"
 msgstr "(=全て= 全てのトピックを表示します)"
 
 #: data/Sandbox/WebHome.txt:9
-msgid "(Use a topic name in TWiki.WikiNotation)"
-msgstr "( TWiki.WikiNotationの中で一つのトピック名を使用します)"
+msgid "(Use a topic name in System.WikiNotation)"
+msgstr "( System.WikiNotationの中で一つのトピック名を使用します)"
 
 #: templates/messages.tmpl:156
 msgid "(__Suggestion:__ How about uploading your picture to your topic?)"
@@ -633,10 +633,10 @@ msgstr "新しいトピック名はWikiWordでない名前を許可します"
 
 #: templates/messages.tmpl:256
 msgid ""
-"Alternatively hit back to go back to TWiki.UserRegistration and choose a "
+"Alternatively hit back to go back to System.UserRegistration and choose a "
 "different username."
 msgstr ""
-"また、“戻る”をクリックして TWiki.UserRegistration に戻って他のユーザー名を選"
+"また、“戻る”をクリックして System.UserRegistration に戻って他のユーザー名を選"
 "択することも出来ます "
 
 #: templates/messages.tmpl:243
@@ -1307,11 +1307,11 @@ msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
-"Enter your TWiki.LoginName. (Typically First name and last name, no space, "
+"Enter your System.LoginName. (Typically First name and last name, no space, "
 "no dots, capitalized, e.g. !JohnSmith, unless you chose otherwise). Visit %"
 "SYSTEMWEB%.UserRegistration if you do not have one."
 msgstr ""
-" TWiki.LoginName (典型的な書き方　名字＋名前、スペース無し、ピリオド無し、頭"
+" System.LoginName (典型的な書き方　名字＋名前、スペース無し、ピリオド無し、頭"
 "文字を大文字にする。例えば: OdaNobunaga 他の名称を選択した場合を除く)をご入力"
 "ください。 まだ登録していない場合は %SYSTEMWEB%.UserRegistration にアクセスし"
 "てください"
