--- a/core/locale/sv.po
+++ b/core/locale/sv.po
@@ -210,8 +210,8 @@ msgid "(=all= to show all topics)"
 msgstr "(=all= för att visa alla sidor)"
 
 #: data/Sandbox/WebHome.txt:9
-msgid "(Use a topic name in TWiki.WikiNotation)"
-msgstr "(Använd ett sidnamn i TWiki.WikiNotation)"
+msgid "(Use a topic name in System.WikiNotation)"
+msgstr "(Använd ett sidnamn i System.WikiNotation)"
 
 #: templates/messages.tmpl:156
 msgid "(__Suggestion:__ How about uploading your picture to your topic?)"
@@ -637,11 +637,11 @@ msgstr "Tillåt ord som inte är <nop>WikiOrd på nya sidor"
 
 #: templates/messages.tmpl:256
 msgid ""
-"Alternatively hit back to go back to TWiki.UserRegistration and choose a "
+"Alternatively hit back to go back to System.UserRegistration and choose a "
 "different username."
 msgstr ""
 "Alternativt kan du använda \"Tilbaka\"-knappen i din webbläsare, för att gå "
-"tilbake till TWiki.UserRegistration och välja ett nytt användarnamn."
+"tilbake till System.UserRegistration och välja ett nytt användarnamn."
 
 #: templates/messages.tmpl:243
 msgid ""
@@ -1322,7 +1322,7 @@ msgstr "Skriv in administratörsanvändarnamn eller inloggning angiven i %1"
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
-"Enter your TWiki.LoginName. (Typically First name and last name, no space, "
+"Enter your System.LoginName. (Typically First name and last name, no space, "
 "no dots, capitalized, e.g. !JohnSmith, unless you chose otherwise). Visit %"
 "SYSTEMWEB%.UserRegistration if you do not have one."
 msgstr ""
