--- a/core/locale/uk.po
+++ b/core/locale/uk.po
@@ -213,8 +213,8 @@ msgid "(=all= to show all topics)"
 msgstr "(введіть =all= для виводу без обмежень)"
 
 #: data/Sandbox/WebHome.txt:9
-msgid "(Use a topic name in TWiki.WikiNotation)"
-msgstr "(Використовуйте ім'я теми у TWiki.WikiNotation)"
+msgid "(Use a topic name in System.WikiNotation)"
+msgstr "(Використовуйте ім'я теми у System.WikiNotation)"
 
 #: templates/messages.tmpl:156
 msgid "(__Suggestion:__ How about uploading your picture to your topic?)"
@@ -644,10 +644,10 @@ msgstr "Дозволити не <nop>ВікіСлово для назви нов
 
 #: templates/messages.tmpl:256
 msgid ""
-"Alternatively hit back to go back to TWiki.UserRegistration and choose a "
+"Alternatively hit back to go back to System.UserRegistration and choose a "
 "different username."
 msgstr ""
-"Ви також можете повернутися до TWiki.UserRegistration і вибрати інше ім'я "
+"Ви також можете повернутися до System.UserRegistration і вибрати інше ім'я "
 "користувача "
 
 #: templates/messages.tmpl:243
@@ -1334,7 +1334,7 @@ msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
-"Enter your TWiki.LoginName. (Typically First name and last name, no space, "
+"Enter your System.LoginName. (Typically First name and last name, no space, "
 "no dots, capitalized, e.g. !JohnSmith, unless you chose otherwise). Visit %"
 "SYSTEMWEB%.UserRegistration if you do not have one."
 msgstr ""
