--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -208,8 +208,8 @@ msgid "(=all= to show all topics)"
 msgstr "(=all= pro všechny články)"
 
 #: data/Sandbox/WebHome.txt:9
-msgid "(Use a topic name in TWiki.WikiNotation)"
-msgstr "Použijte jméno článku ve tvaru TWiki.JmenoClanku"
+msgid "(Use a topic name in System.WikiNotation)"
+msgstr "Použijte jméno článku ve tvaru System.JmenoClanku"
 
 #: templates/messages.tmpl:156
 msgid "(__Suggestion:__ How about uploading your picture to your topic?)"
@@ -642,10 +642,10 @@ msgstr "Povolí ne <nop>WikiWord pro nový název článku"
 
 #: templates/messages.tmpl:256
 msgid ""
-"Alternatively hit back to go back to TWiki.UserRegistration and choose a "
+"Alternatively hit back to go back to System.UserRegistration and choose a "
 "different username."
 msgstr ""
-"Alternativně stiskněte Zpět, pro návrat zpět do TWiki.UserRegistration a "
+"Alternativně stiskněte Zpět, pro návrat zpět do System.UserRegistration a "
 "vyberte jiné jméno."
 
 #: templates/messages.tmpl:243
@@ -1344,7 +1344,7 @@ msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
-"Enter your TWiki.LoginName. (Typically First name and last name, no space, "
+"Enter your System.LoginName. (Typically First name and last name, no space, "
 "no dots, capitalized, e.g. !JohnSmith, unless you chose otherwise). Visit %"
 "SYSTEMWEB%.UserRegistration if you do not have one."
 msgstr ""
