--- a/core/locale/zh-cn.po
+++ b/core/locale/zh-cn.po
@@ -211,8 +211,8 @@ msgid "(=all= to show all topics)"
 msgstr "(=所有= 显示所有主题)"
 
 #: data/Sandbox/WebHome.txt:9
-msgid "(Use a topic name in TWiki.WikiNotation)"
-msgstr "(在 TWiki.WikiNotation 使用一个主题名)"
+msgid "(Use a topic name in System.WikiNotation)"
+msgstr "(在 System.WikiNotation 使用一个主题名)"
 
 #: templates/messages.tmpl:156
 msgid "(__Suggestion:__ How about uploading your picture to your topic?)"
@@ -615,9 +615,9 @@ msgstr "允许使用非<nop>WikiWord 作为新主题名称"
 
 #: templates/messages.tmpl:256
 msgid ""
-"Alternatively hit back to go back to TWiki.UserRegistration and choose a "
+"Alternatively hit back to go back to System.UserRegistration and choose a "
 "different username."
-msgstr "另外，也可以点击“返回”回到 TWiki.UserRegistration 选择另外一个用户名 "
+msgstr "另外，也可以点击“返回”回到 System.UserRegistration 选择另外一个用户名 "
 
 #: templates/messages.tmpl:243
 msgid ""
@@ -1268,11 +1268,11 @@ msgstr "输入Wiki管理员用户名或登录为 %1 组"
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
-"Enter your TWiki.LoginName. (Typically First name and last name, no space, "
+"Enter your System.LoginName. (Typically First name and last name, no space, "
 "no dots, capitalized, e.g. !JohnSmith, unless you chose otherwise). Visit %"
 "SYSTEMWEB%.UserRegistration if you do not have one."
 msgstr ""
-"输入你的TWiki.LoginName (典型的写法姓＋名，没有空格，没有点. 首字母大写，例"
+"输入你的System.LoginName (典型的写法姓＋名，没有空格，没有点. 首字母大写，例"
 "如: CheDong 除非您另外选择了其他名称) 如果您没有注册请访问 %SYSTEMWEB%."
 "UserRegistration "
 
