--- a/core/bin/changes
+++ b/core/bin/changes
@@ -32,7 +32,7 @@ BEGIN {
         require Carp;
         $SIG{__DIE__} = \&Carp::confess;
     }
-    $ENV{TWIKI_ACTION} = 'changes';
+    $ENV{FOSWIKI_ACTION} = 'changes';
     @INC = ('.', grep { $_ ne '.' } @INC);
     require 'setlib.cfg';
 }
