--- a/core/locale/nl.po
+++ b/core/locale/nl.po
@@ -40,9 +40,8 @@ msgstr "%1"
 
 #: ../core/templates/registerfailednotremoved.tmpl:3
 #: ../core/templates/registerfailedremoved.tmpl:3
-#, fuzzy
 msgid "%1 - Registration failure for %2 (%3)"
-msgstr "%1 - Registratie voor %2 (%3)"
+msgstr "%1 - Registratie mislukt voor %2 (%3)"
 
 #: ../TopicUserMappingContrib/data/System/ManagingUsers.txt:116
 #: ../core/templates/registernotify.tmpl:3
@@ -51,29 +50,25 @@ msgid "%1 - Registration for %2 (%3)"
 msgstr "%1 - Registratie voor %2 (%3)"
 
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:68
-#, fuzzy
 msgid "%1 - complete Foswiki documentation, Quick Start to Reference"
 msgstr ""
-"%1 - volledige TWiki documentatie voor TWiki gebruikers, naslagoverzicht"
+"%1 - volledige Foswiki documentatie, naslagoverzicht"
 
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:70
 msgid "%1 - just for me"
 msgstr "%1 - voor mij alleen"
 
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:67
-#, fuzzy
 msgid "%1 - starting points on Foswiki"
-msgstr "%1 - waar te beginnen met TWiki"
+msgstr "%1 - waar te beginnen met Foswiki"
 
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:69
-#, fuzzy
 msgid "%1 - try out Foswiki on your own"
-msgstr "%1 - probeer TWiki uit voor jezelf"
+msgstr "%1 - probeer Foswiki uit voor jezelf"
 
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:66
-#, fuzzy
 msgid "%1 - view a short introductory presentation on Foswiki for beginners"
-msgstr "%1 - een korte introductie tot TWiki voor nieuwe gebruikers"
+msgstr "%1 - een korte introductie tot Foswiki voor nieuwe gebruikers"
 
 #: ../core/data/System/WebChanges.txt:2
 msgid "%1 Recent Changes in %2 Web"
@@ -97,7 +92,7 @@ msgstr "%1 om je wachtwoord te wijzigen"
 #: ../TopicUserMappingContrib/data/System/ResetPassword.txt:38
 #, fuzzy
 msgid "%1 has a list of other Foswiki users"
-msgstr "%1 heeft een lijst van andere TWikigebruikers"
+msgstr "%1 heeft een lijst van andere Foswiki gebruikers"
 
 #: ../core/templates/messages.tmpl:434
 msgid ""
@@ -119,7 +114,7 @@ msgstr "%1 home"
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:86
 #, fuzzy
 msgid "%1 is a list of Foswiki user documentation"
-msgstr "%1 is een lijst van pagina&#39;s van de TWiki gebruikersdocumentatie"
+msgstr "%1 is een lijst van pagina&#39;s van de Foswiki gebruikersdocumentatie"
 
 #: ../core/templates/messages.tmpl:114
 msgid "%1 is an invalid name for a new web"
@@ -148,7 +143,7 @@ msgstr "%1 is de standaard pagina voor verwijderde bijlagen."
 #: ../TopicUserMappingContrib/data/System/NewUserTemplate.txt:87
 #, fuzzy
 msgid "%1 lists all Foswiki user tools"
-msgstr "%1 vermeldt alle TWiki gebruikershulpmiddelen"
+msgstr "%1 vermeldt alle Foswiki gebruikershulpmiddelen"
 
 #: ../core/templates/messages.tmpl:440
 msgid "%1 may still be editing %2."
@@ -394,14 +389,14 @@ msgid ""
 "server before registering."
 msgstr ""
 "*Belangrijk:* de informatie van dit formulier wordt opgeslagen in een "
-"database op de TWiki server. Deze database is toegankelijk voor eenieder die "
+"database op de Foswiki server. Deze database is toegankelijk voor eenieder die "
 "de server vanuit het web kan benaderen (hoewel wachtwoorden worden "
 "versleuteld, en e-mailadressen worden verhaspeld om ongewenste reclame te "
 "voorkomen). In het land waar je verblijft, of in het land waar de server "
 "wordt gehost, kan een databeschermingswet gelden waarin het beheer van "
 "dergelijke databases wordt bepaald. In geval van twijfel kun je contact "
 "opnemen met %1 voor details aangaande het databeschermingsbeleid van deze "
-"TWiki server voordat je overgaat tot registratie."
+"Foswiki server voordat je overgaat tot registratie."
 
 #: ../core/templates/attachagain.tmpl:19
 msgid ""
@@ -598,7 +593,7 @@ msgstr "Een %1 variabele wordt toegevoegd in WebPreferences"
 #: ../core/templates/login.sudo.tmpl:3
 #, fuzzy
 msgid "Admin Foswiki User Authentication"
-msgstr "Admin TWiki Geberuikersauthenticatie"
+msgstr "Admin Foswiki Geberuikersauthenticatie"
 
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:25
 msgid "Admin Maintenance"
@@ -919,7 +914,7 @@ msgstr "Gewijzigd:"
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:9
 #: ../PatternSkin/data/Trash/WebLeftBarExample.txt:6
 #: ../PatternSkin/data/_default/WebLeftBar.txt:7
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:7
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:7
 msgid "Changes"
 msgstr "Wijzigingen"
 
@@ -1004,7 +999,7 @@ msgid ""
 "Confirm your changes using Foswiki's [[%1][topic history comparison tool "
 "(diff)]]."
 msgstr ""
-"Bevestig je wijzigingen met TWiki's [[%1][paginageschiedenisvergelijker "
+"Bevestig je wijzigingen met Foswiki's [[%1][paginageschiedenisvergelijker "
 "(diff)]]."
 
 #: ../core/templates/oopsleaseconflict.tmpl:6
@@ -1081,7 +1076,7 @@ msgstr "<nop>Testpagina### aanmaken"
 #: ../PatternSkin/data/Main/WebLeftBarExample.txt:5
 #: ../PatternSkin/data/Sandbox/WebLeftBarExample.txt:5
 #: ../PatternSkin/data/_default/WebLeftBar.txt:4
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:4
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:4
 msgid "Create New Topic"
 msgstr "Nieuwe pagina aanmaken"
 
@@ -1326,7 +1321,7 @@ msgstr ""
 #: ../core/lib/Foswiki/UI/Register.pm:450
 #, fuzzy
 msgid "Email has been disabled for this Foswiki installation"
-msgstr "E-mail is gedeactiveerd voor deze TWiki"
+msgstr "E-mail is gedeactiveerd voor deze Foswiki"
 
 #: ../PatternSkin/templates/foswiki.pattern.tmpl:75
 msgid "Enlarge edit box"
@@ -1433,12 +1428,12 @@ msgstr "Formulierdefinitie ontbreekt"
 #: ../core/templates/login.tmpl:3
 #, fuzzy
 msgid "Foswiki User Authentication"
-msgstr "TWiki gebruikersauthenticatie"
+msgstr "Foswiki gebruikersauthenticatie"
 
 #: ../core/templates/mailresetpassword.tmpl:3
 #, fuzzy
 msgid "Foswiki password reset for %1"
-msgstr "TWiki wachtwoord opnieuw ingesteld voor %1"
+msgstr "Foswiki wachtwoord opnieuw ingesteld voor %1"
 
 #: ../core/templates/oopschangelanguage.tmpl:12
 #, fuzzy
@@ -1448,7 +1443,7 @@ msgid ""
 "\"Change language\". Otherwise, follow the \"Cancel\" link on the bottom of "
 "the page to return to the previous topic."
 msgstr ""
-"TWiki's gebruikersinterface is beschikbaar in meerdere talen. Als je de taal "
+"Foswiki's gebruikersinterface is beschikbaar in meerdere talen. Als je de taal "
 "voor dit bezoek wilt veranderen, kies een van de volgende beschikbare talen "
 "en druk op \"Taal wijzigen\". Om terug te gaan naar de vorige pagina, klik "
 "op \"Afbreken\" onderaan de pagina."
@@ -1599,7 +1594,7 @@ msgid ""
 "If you are developing a Foswiki application, see %1 for a description of the "
 "correct parameters."
 msgstr ""
-"Als je een [[TWikiApplication][TWiki applicatie]] ontwikkelt, zie %1 voor "
+"Als je een [[TWikiApplication][Foswiki applicatie]] ontwikkelt, zie %1 voor "
 "een beschrijving van de juiste pagina&#39;s."
 
 #: ../core/templates/messages.tmpl:489
@@ -1701,7 +1696,7 @@ msgid ""
 "In some cases, Foswiki changes the name of the uploaded file to make it safe "
 "and accessible across all platforms:"
 msgstr ""
-"In sommige gevallen verandert TWiki de naam van het geuploaded bestand om "
+"In sommige gevallen verandert Foswiki de naam van het geuploaded bestand om "
 "deze toegankelijk te maken voor alle platforms."
 
 #: ../core/templates/messages.tmpl:272 ../core/templates/messages.tmpl:279
@@ -1725,7 +1720,7 @@ msgstr "Onjuiste parameters aan het =%1= script"
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:7
 #: ../PatternSkin/data/Trash/WebLeftBarExample.txt:4
 #: ../PatternSkin/data/_default/WebLeftBar.txt:5
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:5
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:5
 msgid "Index"
 msgstr "Index"
 
@@ -2037,7 +2032,7 @@ msgstr "Blijf op de hoogte"
 #: ../PatternSkin/data/Sandbox/WebLeftBarExample.txt:9
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:10
 #: ../PatternSkin/data/_default/WebLeftBar.txt:8
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:8
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:8
 msgid "Notifications"
 msgstr "Blijf op de hoogte"
 
@@ -2211,7 +2206,7 @@ msgstr ""
 #: ../PatternSkin/data/Sandbox/WebLeftBarExample.txt:12
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:13
 #: ../PatternSkin/data/_default/WebLeftBar.txt:11
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:11
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:11
 msgid "Preferences"
 msgstr "Instellingen"
 
@@ -2249,7 +2244,7 @@ msgstr "Stil bewaren"
 #: ../PatternSkin/data/Sandbox/WebLeftBarExample.txt:10
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:11
 #: ../PatternSkin/data/_default/WebLeftBar.txt:9
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:9
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:9
 msgid "RSS Feed"
 msgstr "RSS Feed"
 
@@ -2462,7 +2457,7 @@ msgstr "Bewaard in:"
 #: ../PatternSkin/data/Trash/WebLeftBarExample.txt:5
 #: ../PatternSkin/data/_default/WebLeftBar.txt:6
 #: ../PatternSkin/templates/foswiki.pattern.tmpl:38
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:6
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:6
 #: ../core/data/System/WebSearch.txt:24
 #: ../core/data/System/WebSearchAdvanced.txt:31
 #: ../core/data/_default/WebHome.txt:11
@@ -2673,7 +2668,7 @@ msgstr "Spaties zijn vervangen door liggende streepjes"
 #: ../PatternSkin/data/Sandbox/WebLeftBarExample.txt:11
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:12
 #: ../PatternSkin/data/_default/WebLeftBar.txt:10
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:10
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:10
 msgid "Statistics"
 msgstr "Statistieken"
 
@@ -2785,8 +2780,8 @@ msgstr ""
 "vuistregel is om toe te voegen aan het einde van de pagina en te signeren en "
 "dateren met je %4."
 
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebAtom.txt:3
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebRss.txt:5
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebAtom.txt:3
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebRss.txt:5
 #: ../core/data/Trash/WebRss.txt:5 ../core/data/_default/WebAtom.txt:3
 #: ../core/data/_default/WebRss.txt:5
 msgid "The %1 web of Foswiki, the Free and Open Source Wiki."
@@ -2922,7 +2917,7 @@ msgstr "Er zou een regel moeten zijn die %1 bevat; kijk uit naar %2 (of %3)"
 #: ../TopicUserMappingContrib/data/System/UserRegistration.txt:6
 #, fuzzy
 msgid "This Foswiki does _not_ support new User Registration"
-msgstr "Deze TWiki ondersteunt _geen_ registratie van nieuwe gebruikers"
+msgstr "Deze Foswiki ondersteunt _geen_ registratie van nieuwe gebruikers"
 
 #: ../core/templates/messages.tmpl:350
 msgid "This can be automatically upgraded by:"
@@ -2941,11 +2936,11 @@ msgid ""
 "are kept secret and will *not* be published anywhere on this site."
 msgstr ""
 "Gebruik dit formulier om je geregistreerde e-mailadres te wijzigen. Je "
-"geregistreerde e-mailadressen worden gebruikt door TWiki voor het versturen "
+"geregistreerde e-mailadressen worden gebruikt door Foswiki voor het versturen "
 "van e-mails over wachtwoordwijzigingen. De adressen die je hier registreert "
 "worden geheimgehouden en worden *niet gepubliceerd* op deze site."
 
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebNotify.txt:2
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebNotify.txt:2
 #: ../core/data/Main/WebNotify.txt:2 ../core/data/Sandbox/WebNotify.txt:2
 #: ../core/data/System/WebNotify.txt:2 ../core/data/Trash/WebNotify.txt:2
 #: ../core/data/_default/WebNotify.txt:2
@@ -3058,7 +3053,7 @@ msgstr "Naar web:"
 #: ../PatternSkin/data/System/WebLeftBarExample.txt:4
 #: ../PatternSkin/data/Trash/WebLeftBarExample.txt:3
 #: ../PatternSkin/data/_default/WebLeftBar.txt:3
-#: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:3
+#: ../TWikiCompatibilityPlugin/data/Foswiki/WebLeftBarExample.txt:3
 msgid "Toolbox"
 msgstr ""
 
@@ -3511,7 +3506,7 @@ msgid ""
 "registered e-mail for you in the secret database, it will look in your user "
 "topic for a line like this:"
 msgstr ""
-"We raden je echt aan om een geldig e-mailadres te registreren. Als TWiki "
+"We raden je echt aan om een geldig e-mailadres te registreren. Als Foswiki "
 "geen geregistreerd e-mailadres kan vinden in de afgeschermde database, zal "
 "het zoeken in je persoonlijke pagina naar een regel als deze:"
 
@@ -3573,7 +3568,7 @@ msgstr ""
 #: ../core/templates/messages.tmpl:163
 #, fuzzy
 msgid "Your personal Foswiki topic %1 has been created"
-msgstr "Je persoonlijke TWiki pagina %1 is aangemaakt"
+msgstr "Je persoonlijke Foswiki pagina %1 is aangemaakt"
 
 #: ../core/templates/messages.tmpl:195
 #, fuzzy
@@ -3603,7 +3598,7 @@ msgid ""
 "Your system may not support changing passwords through Foswiki. Check with "
 "your Wiki administrator."
 msgstr ""
-"Het is mogelijk dat je systeem het veranderen van wachtwoorden via TWiki "
+"Het is mogelijk dat je systeem het veranderen van wachtwoorden via Foswiki "
 "niet ondersteunt. Controleer dit bij je Wikibeheerder."
 
 #: ../core/templates/messages.tmpl:11
@@ -3869,89 +3864,3 @@ msgstr ""
 "mailadressen geldig zijn, en je je wachtwoord bent vergeten, neem dan "
 "contact op met %1."
 
-#~ msgid "%1 Web Home"
-#~ msgstr "%1 Web Home"
-
-#~ msgid "(oops)"
-#~ msgstr "(melding)"
-
-#~ msgid "(semicolon =;= for and)"
-#~ msgstr "(puntkomma =;= voor en)"
-
-#~ msgid "Create '%1'"
-#~ msgstr "'%1' aanmaken"
-
-#~ msgid "Create personal sidebar"
-#~ msgstr "Persoonlijk menu aanmaken"
-
-#~ msgid "Did you spell the %1 correctly?"
-#~ msgstr "Heb je %1 juist gespeld?"
-
-#~ msgid "Do show:"
-#~ msgstr "Toon:"
-
-#~ msgid "Do you wish to create the topic %1?"
-#~ msgstr "Wil je pagina %1 aanmaken?"
-
-#~ msgid ""
-#~ "Enter your System.LoginName. (Typically First name and last name, no "
-#~ "space, no dots, capitalized, e.g. !JohnSmith, unless you chose "
-#~ "otherwise). Visit %SYSTEMWEB%.UserRegistration if you do not have one."
-#~ msgstr ""
-#~ "Vul je [[%SYSTEMWEB%.LoginName][login naam]] in. (Gebruikelijk Voornaam "
-#~ "Achternaam zonder spatie, zonder punten en met hoofdletters, "
-#~ "bijvoorbeeld !JanDevries, tenzij je bewust anders kiest). Ga naar de [[%"
-#~ "SYSTEMWEB%.UserRegistration][registratiepagina]] als je geen login hebt."
-
-#~ msgid "Internal error when sending email to %1."
-#~ msgstr "Interne fout bij het versturen van e-mail naar %1."
-
-#~ msgid "List more similar topic in this web"
-#~ msgstr "Toon vergelijkbare pagina&#39;s in dit web"
-
-#~ msgid "Note: This topic does not exist"
-#~ msgstr "Let op: Deze pagina bestaat niet"
-
-#~ msgid "Opens page in new window"
-#~ msgstr "Opent pagina in een nieuw venster"
-
-#~ msgid "Remember me"
-#~ msgstr "Onthou mij op deze computer"
-
-#~ msgid "Remember, a %1 is case sensitive."
-#~ msgstr "Let op, een %1 is hoofdlettergevoelig."
-
-#~ msgid "Similar topics in this web (if any):"
-#~ msgstr "Vergelijkbare pagina&#39;s in dit web (eventueel):"
-
-#~ msgid ""
-#~ "The %1 web of TWiki. TWiki is a Web-Based Collaboration Platform for the "
-#~ "Enterprise."
-#~ msgstr ""
-#~ "Het %1 web van TWiki. TWiki is een internet samenwerkingsplatform voor de "
-#~ "onderneming."
-
-#~ msgid "The topic %1 you are trying to access does not exist, yet."
-#~ msgstr "Pagina %1 bestaat nog niet."
-
-#~ msgid "This topic has moved to %1."
-#~ msgstr "Deze pagina is verplaatst naar %1."
-
-#~ msgid ""
-#~ "This topic name is not recommended because it will not be linked "
-#~ "automatically. See %1 for details"
-#~ msgstr ""
-#~ "Deze paginanaam wordt niet aanbevolen omdat deze niet automatisch gelinkt "
-#~ "zal worden. Zie %1 voor details."
-
-#~ msgid "WARNING:"
-#~ msgstr "WAARSCHUWING:"
-
-#~ msgid "about !BookView"
-#~ msgstr "over !BookView"
-
-#~ msgid "about regular expression search"
-#~ msgstr "over _regular expression_ zoeken"
-
-#~ msgid "looking for references in _%1 web_ only"
-#~ msgstr "zoeken naar verwijzingen alleen in _%1 web_"
