--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -549,7 +549,7 @@ msgstr ""
 
 #: ../core/data/System/TopicDoesNotExistViewTemplate.txt:22
 msgid "A topic with this name did exist, but has been renamed or moved to %1."
-msgstr ""
+msgstr "Ein Topic mit diesem Namen existiert, es wurde jedoch umbenannt oder nach %1 verschoben."
 
 #: ../core/templates/oopsaccessdenied.tmpl:6
 msgid "Access Denied"
@@ -787,7 +787,7 @@ msgstr "Basis Web %1 fehlt oder existiert nicht"
 
 #: ../core/lib/Foswiki/OopsException.pm:41
 msgid "Bathing problem"
-msgstr ""
+msgstr "Bade-Problem"
 
 #: ../core/data/System/WebSearch.txt:31
 #: ../core/data/System/WebSearchAdvanced.txt:40
@@ -1026,7 +1026,7 @@ msgstr "Fahren Sie fort, um die neue Seite anzulegen"
 msgid ""
 "Copy text and form data to a new topic (no attachments will be copied "
 "though)."
-msgstr ""
+msgstr "Den Text und Formular-Daten in ein neues Topic kopieren (Anhänge werden nicht kopiert)"
 
 #: ../core/templates/oopsmore.tmpl:19
 msgid "Copy topic"
@@ -1393,7 +1393,7 @@ msgstr "Die Datei wurde mit einem anderen Namen hochgeladen"
 
 #: ../core/data/System/TopicDoesNotExistViewTemplate.txt:11
 msgid "Find similar topics"
-msgstr ""
+msgstr "Ähnliche Topics finden"
 
 #: ../core/templates/oopsmore.tmpl:54 ../core/templates/oopsmore.tmpl:56
 msgid "Find topics that link to %1 ..."
@@ -1541,14 +1541,14 @@ msgid ""
 "However, sending a confirmation e-mail to %2 failed, suggesting that this "
 "may be a fraudulent registration.  The user '%1' could not be removed "
 "automatically."
-msgstr ""
+msgstr "Da die Bestätigungsmail an %2 fehlgeschlagen ist, kann davon ausgegangen werden, dass es sich um eine Betrugs-Anmeldung handelt. Der Benutzer '%1' konnte nicht automatisch entfernt werden."
 
 #: ../core/templates/registerfailedremoved.tmpl:14
 msgid ""
 "However, sending a confirmation e-mail to %2 failed, suggesting that this "
 "maye be a fraudulent registration.  The user '%1' was removed automatically. "
 "However you may have to remove the user's personal topic manually."
-msgstr ""
+msgstr "Da die Bestätigungsmail an %2 fehlgeschlagen ist, kann davon ausgegangen werden, dass es sich um eine Betrugs-Anmeldung handelt. Der Benutzer '%1' wurde automatisch entfernt, jedoch müssen Sie das persönliche Benutzer-Topic manuell entfernen."
 
 #: ../core/templates/messages.tmpl:360
 msgid ""
@@ -1601,7 +1601,7 @@ msgstr "Wenn Sie durch einen Klick auf ein Fragezeichen hierher gekommen sind"
 
 #: ../core/templates/messages.tmpl:247
 msgid "If you don't receive a verification email within the next hour, "
-msgstr ""
+msgstr "Wenn Sie keine Bestätigungs-Mail innerhalb der nächsten Stunde bekommen, "
 
 #: ../PatternSkin/templates/renameattachmentdelete.pattern.tmpl:40
 msgid "If you enter a different name, make sure the topic does  exist."
@@ -2208,7 +2208,7 @@ msgstr "Einstellungen für"
 
 #: ../core/lib/Foswiki/OopsException.pm:42
 msgid "Problem filling bath"
-msgstr ""
+msgstr "Problem die Badewanne zu füllen"
 
 #: ../PatternSkin/templates/attach.pattern.tmpl:53
 msgid "Properties"
@@ -2778,11 +2778,11 @@ msgstr ""
 #: ../core/data/Trash/WebRss.txt:5 ../core/data/_default/WebAtom.txt:3
 #: ../core/data/_default/WebRss.txt:5
 msgid "The %1 web of Foswiki, the Free and Open Source Wiki."
-msgstr ""
+msgstr "Das %1 Web von Foswiki, dem Freien Open Source Wiki."
 
 #: ../core/data/Sandbox/WebRss.txt:5
 msgid "The %1 web of Foswiki. Foswiki is the Free and Open Source Wiki."
-msgstr ""
+msgstr "Das %1 Web von Foswiki. Foswiki ist das Freie Open Source Wiki."
 
 #: ../core/templates/messages.tmpl:155
 msgid "The Administrator has disabled new user registration."
@@ -3010,7 +3010,7 @@ msgstr ""
 msgid ""
 "To display the above search results in a topic, copy-paste the following "
 "markup:"
-msgstr ""
+msgstr "Um die oben stehenden Ergebnisse in ein Topic anzuzeigen, kopieren Sie die folgende Auszeichnung:"
 
 #: ../TopicUserMappingContrib/data/System/UserRegistration.txt:5
 msgid ""
@@ -3051,7 +3051,7 @@ msgstr "Nach Web:"
 #: ../PatternSkin/data/_default/WebLeftBar.txt:3
 #: ../TWikiCompatibilityPlugin/data/TWiki/WebLeftBarExample.txt:3
 msgid "Toolbox"
-msgstr ""
+msgstr "Werkzeugbox"
 
 #: ../core/data/System/TopicDoesNotExistViewTemplate.txt:5
 msgid "Topic %1 does not exist"
@@ -3279,7 +3279,7 @@ msgstr "Topic Historie ansehen"
 
 #: ../core/lib/Foswiki/OopsException.pm:46
 msgid "Warning"
-msgstr ""
+msgstr "Warnung"
 
 #: ../EditTablePlugin/data/System/EditTablePlugin.txt:179
 msgid "Warning: 'include' topic does not exist!"
@@ -3335,7 +3335,7 @@ msgstr ""
 
 #: ../core/templates/messages.tmpl:243
 msgid "While attempting to email <noautolink>%1</noautolink>."
-msgstr ""
+msgstr "Während versucht wird <noautolink>%1</noautolink> eine Mail zu schicken."
 
 #: ../core/templates/attachtables.tmpl:37
 #: ../core/templates/attachtables.tmpl:4
@@ -3482,7 +3482,7 @@ msgstr ""
 
 #: ../core/templates/messages.tmpl:92
 msgid "You must pass a topic name."
-msgstr ""
+msgstr "Sie müssen einen Topic-Namen angeben."
 
 #: ../core/templates/registerconfirm.tmpl:11
 msgid ""
@@ -3578,7 +3578,7 @@ msgstr ""
 msgid ""
 "Your registration verification email has either failed, or is queued in the "
 "mail system."
-msgstr ""
+msgstr "Ihre Bestätigungsmail für die Registrierung ist entweder fehlgeschlagen oder befindet sich noch im Mail-System."
 
 #: ../PatternSkin/templates/edit.pattern.tmpl:70
 msgid "Your signature to copy/paste"
